<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beautiful</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit_confirm">Exit</string>
    <string name="exit_content">Are determined to quit ?</string>
    <string name="is_loading">Loading...</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <!-- MainActivity -->
    <string name="function_null">Function null...</string>
    <string name="function_error">Function errot...</string>
    <string name="title_activity_edit_image">EditImageActivity</string>
    
	<string name="string_return">Return</string>
	<string name="password">Password</string>
	<string name="phone_or_email">Phone or email</string>
	<string name="string_register">Register</string>
    <string name="string_login">Login</string>
    <string name="string_thirder_login">Third party landing</string>
    
    <string name="string_phone_pre">China (+86)</string>
    <string name="string_get_phone_verification">Get verification code</string>
    <string name="string_input_phonenumber">Please enter your phone number.</string>
    <string name="string_input_verificationnumber">Verification code</string>
    <string name="string_input_pwd">Set password</string>
    <string name="string_input_pwd_confirm">Please enter your password again.</string>
</resources>