<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_titlebar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_two" >

    <TextView
        android:id="@+id/include_view_btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:text="@string/string_return"
        android:drawableLeft="@drawable/icon_return"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/include_view_titlebar_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_titlebar_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/string_login"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="@dimen/activity_margin_padding_lr"
        android:paddingRight="@dimen/activity_margin_padding_lr"
        android:textColor="@android:color/white"
        android:textSize="@dimen/activity_textview_size" />

    <TextView
        android:id="@+id/include_view_btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/white"
        android:text="@string/string_register"
        android:layout_marginRight="20dp"
        android:visibility="visible" />

</RelativeLayout>