<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <FrameLayout
        android:id="@+id/companyIcon"
        android:layout_width="@dimen/login_and_register_top_imagetip_outter_size"
        android:layout_height="@dimen/login_and_register_top_imagetip_outter_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/outter" >

        <com.soul.project.application.view.CircleImageView
            android:layout_width="@dimen/login_and_register_top_imagetip_inner_size"
            android:layout_height="@dimen/login_and_register_top_imagetip_inner_size"
            android:layout_gravity="center"
            android:src="@drawable/test2" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutLoginAndRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/companyIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login"
            android:textSize="@dimen/login_and_register_top_textsize"
            android:textColor="@color/sea_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text=" / "
            android:textSize="@dimen/login_and_register_top_textsize"
            android:textColor="@color/sea_blue" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_register"
            android:textSize="@dimen/login_and_register_top_textsize"
            android:textColor="@color/sea_blue" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtThirderLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutLoginAndRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_and_register_center_margin_top"
        android:text="@string/string_thirder_login"
        android:textColor="@color/sea_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtThirderLogin"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ibQQLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_qq" />

        <ImageButton
            android:id="@+id/ibWeiXinLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:background="@drawable/btn_weixin" />
    </LinearLayout>

</RelativeLayout>